--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,8 @@ dependencies = [
     "aio-pika (>=9.5.7,<10.0.0)",
     "aiomysql (>=0.3.2,<0.4.0)",
     "alembic (>=1.17.1,<2.0.0)",
-    "pyyaml (>=6.0.3,<7.0.0)"
+    "pyyaml (>=6.0.3,<7.0.0)",
+    "cryptography (>=46.0.3,<47.0.0)"
 ]
 
 
